tests/baselines/reference/parserErrorRecovery_ExtendsOrImplementsClause1.errors.txt
==== tests/cases/compiler/parserErrorRecovery_ExtendsOrImplementsClause1.ts (1 errors) ====
    class C extends {
            ~~~~~~~
!!! parserErrorRecovery_ExtendsOrImplementsClause1.ts(1,9): error TS1097: 'extends' list cannot be empty.
    }